[package]
name = "workstreams-api"
version = "0.1.0"
authors = ["Odysseas Lamtzidis <odyslam@gmail.com>"]
description = "The API of radicle-workstreams, a new way for teams to pay their contributes leveraging Drips"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
ethers = "0.6.2"
worker = "0.0.9"
siwe = "0.2.0"
hex = "0.4"
serde_json = "1.0.67"
futures = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
iri-string = "0.4"
url = "2.2.2"
sha2 = "0.10"
rand = "0.8.4"
chrono = "0.4.19"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
#  The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# [patch."https://github.com/odyslam/ethers-rs"]
# ethers = { path = "../../odyslam/ethers-rs" }

